[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[project]
name = "pyv_file_running"
version = "1.0.0"
description = "A module for '.pyv' file"
license = {text = "MIT"}
authors = [
    { name = "Locked-chess-official", email = "13140752715@163.com" }
]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/Locked-chess-official/pyv"

[tool.hatch.build.targets.wheel]
sources = ["."]
modules = ["pyv"]
include = ["pyv.py"]

[project.scripts]
pyv = "pyv:main"
